[tool.poetry]
name = "qosst-pp"
version = "0.10.1"
description = "Post-processing submodule of QOSST, containing modules for information reconciliation and privacy amplification."
authors = ["Yoann Piétri <Yoann.Pietri@lip6.fr>"]
packages = [{ include = "qosst_pp" }, { include = "qosst_pp/py.typed" }]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/qosst"
repository = "https://github.com/qosst/qosst-pp"
documentation = "https://qosst-core.readthedocs.io/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Security :: Cryptography",
]

[tool.poetry.dependencies]
python = ">=3.9, <3.14"
qosst-core = { git = "https://github.com/qosst/qosst-core", branch = "post-processing" }
#qosst-core = "^0.10.1"
#cryptomite = "^0.2.2"

[tool.poetry.group.dev.dependencies]
Sphinx = [
    { version = "^5.0.0", python = ">=3.9, <3.10" },
    { version = "^8.1.0", python = ">=3.10, <3.14" },
]
sphinx-rtd-theme = [
    { version = "^1.0.0", python = ">=3.9, <3.10" },
    { version = "^3.0.0", python = ">=3.10, <3.14" },
]
docstr-coverage = "^2.2.0"
myst-parser = [
    { version = "^1.0.0", python = ">=3.9, <3.10" },
    { version = "^4.0.0", python = ">=3.10, <3.14" },
]
sphinx-prompt = "^1.5.0"
sphinx-argparse-cli = "^1.11.0"
sphinxcontrib-programoutput = "^0.17"
setuptools = "^67.6.1"
mypy = "^1.3.0"
pylint = "^3.3.0"
black = "^23.9.1"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
qosst-pp = "qosst_pp.commands:main"
